# aerodynamics

./: .gitignore  Makefile  README.md  aerodynamics.py  expansion.py  gas_dynamics.py  isentropic_gas_flow.py  nozzle.py  optim.py  plot_expansion.py  plot_shock.py  pyproject.toml  shock.py  shock_polar.py
.github/workflows/: lint.yml
src/: expansion.py
src/aerodynamics/: aerodynamics.py  expansion.py  gas_dynamics.py  isentropic_gas_flow.py  nozzle.py  optim.py  plot_expansion.py  plot_shock.py  shock.py  shock_polar.py
