[build-system]
requires = ["setuptools>=62.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aerodynamics"
version = "0.0.1"
maintainers = [
  {name = "Henri Lefevre", email = "henrilefevre.public@gmail.com"}
]
keywords = ["aerodynamics"]
description = "Personal aerodynamics code and research"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Framework :: Matplotlib",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "matplotlib==3.5.1",
  "numpy==1.22.3",
  "scipy==1.8.0"
]

[project.optional-dependencies]
tests = [
  'pylint',
  'isort',
  'mypy'
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = pylint, isort
isolated_build = True

[testenv:pylint]
basepython=python3
deps =
    pylint
commands =
    pylint src

[testenv:isort]
basepython=python3
deps =
    isort
commands =
    isort src/aerodynamics
"""

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["aerodynamics"]

[tool.isort]
py_version = 310
src_paths = ["."]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = 120
disable = [
  "invalid-name",
  "missing-function-docstring",
  "missing-module-docstring"
]
