[build-system]
requires = ["setuptools>=62.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aerodynamics"
version = "0.0.1"
maintainers = [
  {name = "Henri Lefevre", email = "henrilefevre.public@gmail.com"}
]
keywords = ["aerodynamics"]
description = "Personal aerodynamics code and research"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Framework :: Matplotlib",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "matplotlib==3.5.1",
  "numpy==1.22.3",
  "scipy==1.8.0"
]

[project.optional-dependencies]
dev = [
  "pylint==2.13.9",
  "isort==5.10.1",
  "mypy==0.950",
  "black==22.3.0"
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = lint
isolated_build = True
minversion = 3.25.0
requires = tox_venv >= 1.0.0

[testenv:lint]
basepython = python3.10
deps =
    mypy
    isort
    black
    pylint
commands =
    mypy src
    isort --check-only src/aerodynamics
    black --check .
    pylint src
"""

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["aerodynamics"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
src_paths = ["."]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = 120
disable = [
  "cell-var-from-loop",
  "duplicate-code",
  "invalid-name",
  "missing-function-docstring",
  "missing-module-docstring",
  "redefined-outer-name",
  "too-many-arguments",
  "too-many-locals"
]
